@@ -1,3 +1,8 @@
+2016-05-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/formation/formation_dt.h:
+	- FormationDT::sampleVector()を追加
+
 2016-04-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/ann/sirm.cpp:
